# win-cursor-rs

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: CI.yml  rustdoc.yml
examples/: rand_cursor_position.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: input.rs  lib.rs
src/win_cursor/: input.rs.html  lib.rs.html
win_cursor/: all.html  enum.Input.html  fn.get_bounds.html  fn.get_positon.html  fn.left_click.html  fn.right_click.html  fn.send_inputs.html  fn.set_position.html  index.html  sidebar-items.js  struct.MouseInput.html  struct.Rect.html
win_cursor/input/: enum.Input.html  struct.MouseInput.html
