[package]
name = "win-cursor"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
winapi = { version = "0.3.9", features = [ "winuser", "winerror" ] }

[dev-dependencies]
rand = "0.8.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
panic = "abort"

